# Polymarket-Trading

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CANONICAL_MID_IMPLEMENTATION.md  GAPS_FIXED_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  MONSTER_MODE_ACTIVE.md  PRODUCTION_GAPS.md  README.md  RUNTIME_INTEGRATION_COMPLETE.md  TEST_PLAN.md  astra.sh  config.py  config_old_astra_v2.py.backup  main.py  main_maker.py  paper_trader.py  pyproject.toml  report.py  requirements.txt  test_startup.py  watchdog.sh
data_sources/: crypto.py  economic_calendar.py  price_history.py  signals.py  sports.py  weather.py  whale_tracker.py
definitions/: __init__.py  contracts.crypto_threshold.json  lint.py  loader.py  registry.py
docs/: ASTRA_SCORECARD.md  ASTRA_STATE_SNAPSHOT.md  ASTRA_UPGRADE_BACKLOG.md  LIVE_READINESS_GATE.md  LOOP3_SPEC.md  PAPER_BURNIN_ACTIVITY_AWARE_RESEED.md  PAPER_READINESS_GATE.md  PERSONA_VERDICTS.md  PROCESS_SAFETY.md  SESSION_STATE.md
execution/: clob_executor.py  expiration.py  fees.py  mid.py  order_manager.py  order_state_store.py  paper_simulator.py  units.py  wallet.py
feeds/: clob_book.py  market_ws.py  user_ws.py
gates/: __init__.py  definition_gate.py  ev_gate.py
memory/: ASTRA_V2_ROADMAP.md  SESSION_STATE.md  astra_trades.db  astra_trades.db-shm  astra_trades.db-wal  astra_trades.db.bak2  follower_trades.json  implementation_plan_p1_p2.md  market_relationships.json  odds_api_usage.json  opportunity_scoring_feb2026.md  order_state_store.json  paper_positions.json  predictions.json  (+6 more)
(+143 files in other folders)
